[gd_scene load_steps=54 format=3 uid="uid://c53wqrvh4ces8"]

[ext_resource type="Texture2D" uid="uid://dcafos54eaygk" path="res://assets/Textures/Characters/enemies/basic_monster/Attack.png" id="1_4cgod"]
[ext_resource type="Script" uid="uid://bkpuydqkux1up" path="res://scripts/enemies/enemy(angry_man).gd" id="1_rwmqg"]
[ext_resource type="Texture2D" uid="uid://w17i4auc14y2" path="res://assets/Textures/Characters/enemies/basic_monster/Idle.png" id="2_4yotv"]
[ext_resource type="Texture2D" uid="uid://pe6nimi2jkgw" path="res://assets/Textures/Characters/enemies/basic_monster/Death.png" id="3_rwmqg"]
[ext_resource type="Texture2D" uid="uid://8u20rejl7sih" path="res://assets/Textures/Characters/enemies/basic_monster/Shield.png" id="4_tfrge"]
[ext_resource type="Texture2D" uid="uid://digf6l7v2ov57" path="res://assets/Textures/Characters/enemies/basic_monster/Take Hit.png" id="5_tpht8"]
[ext_resource type="Texture2D" uid="uid://c88ay6udt2foc" path="res://assets/Textures/Characters/enemies/basic_monster/Walk.png" id="6_8bqjl"]
[ext_resource type="PackedScene" uid="uid://ixtob3sqmkdd" path="res://scenes/enemies/enemy_attack(skeleton).tscn" id="7_4yotv"]
[ext_resource type="Texture2D" uid="uid://rmkdxrtmu8tu" path="res://assets/Textures/UI/player_ui/bar1.png" id="9_tpht8"]
[ext_resource type="Texture2D" uid="uid://chwt52ovgebel" path="res://assets/Textures/UI/player_ui/bars2.png" id="10_8bqjl"]
[ext_resource type="Texture2D" uid="uid://cbwich8iag38r" path="res://assets/Textures/UI/player_ui/bar3.png" id="11_bp8oi"]
[ext_resource type="Texture2D" uid="uid://c53umc5gfql5r" path="res://assets/Textures/UI/player_ui/bars4.png" id="12_a5byo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bp8oi"]
atlas = ExtResource("1_4cgod")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5byo"]
atlas = ExtResource("1_4cgod")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwif3"]
atlas = ExtResource("1_4cgod")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qof2"]
atlas = ExtResource("1_4cgod")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pgog"]
atlas = ExtResource("1_4cgod")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcp8r"]
atlas = ExtResource("1_4cgod")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvwty"]
atlas = ExtResource("1_4cgod")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_adjwu"]
atlas = ExtResource("1_4cgod")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgtts"]
atlas = ExtResource("2_4yotv")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_sremf"]
atlas = ExtResource("2_4yotv")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_gs64b"]
atlas = ExtResource("2_4yotv")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dssi0"]
atlas = ExtResource("2_4yotv")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2akc"]
atlas = ExtResource("3_rwmqg")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy6ls"]
atlas = ExtResource("3_rwmqg")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_33ema"]
atlas = ExtResource("3_rwmqg")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks5dg"]
atlas = ExtResource("3_rwmqg")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jj3nk"]
atlas = ExtResource("4_tfrge")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3nuh"]
atlas = ExtResource("4_tfrge")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlqyl"]
atlas = ExtResource("4_tfrge")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ot3kt"]
atlas = ExtResource("4_tfrge")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bb2jy"]
atlas = ExtResource("5_tpht8")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6bvl"]
atlas = ExtResource("5_tpht8")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv138"]
atlas = ExtResource("5_tpht8")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktliu"]
atlas = ExtResource("5_tpht8")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwlo5"]
atlas = ExtResource("6_8bqjl")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_khbgt"]
atlas = ExtResource("6_8bqjl")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyljm"]
atlas = ExtResource("6_8bqjl")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7wbk"]
atlas = ExtResource("6_8bqjl")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_dxllm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp8oi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5byo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwif3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qof2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pgog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcp8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvwty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adjwu")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgtts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sremf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gs64b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dssi0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2akc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy6ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33ema")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ks5dg")
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jj3nk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3nuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlqyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ot3kt")
}],
"loop": true,
"name": &"dodge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bb2jy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6bvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv138")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktliu")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwlo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khbgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyljm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7wbk")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_fk8du"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyAttack/CollisionShapeSigma:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_cm85l"]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_attack_animation_finished"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EnemyAttack/CollisionShapeSigma:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.65),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("EnemyAttack")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"start_attack"
}, {
"args": [],
"method": &"end_attack"
}]
}

[sub_resource type="Animation" id="Animation_e6qjn"]
resource_name = "die"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.56667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_die_animation_finished"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EnemyAttack/CollisionShapeSigma:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vacpb"]
resource_name = "dodge"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EnemyAttack/CollisionShapeSigma:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_pp76r"]
resource_name = "hit"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_hit_animation_finished"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EnemyAttack/CollisionShapeSigma:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_tsflv"]
resource_name = "idle"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyAttack/CollisionShapeSigma:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_v5q5s"]
resource_name = "run"
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemyAttack/CollisionShapeSigma:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kfhcu"]
_data = {
&"RESET": SubResource("Animation_fk8du"),
&"attack": SubResource("Animation_cm85l"),
&"die": SubResource("Animation_e6qjn"),
&"dodge": SubResource("Animation_vacpb"),
&"hit": SubResource("Animation_pp76r"),
&"idle": SubResource("Animation_tsflv"),
&"run": SubResource("Animation_v5q5s")
}

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_w6dnl"]
points = PackedVector2Array(-6, -10, -8, 16, 8, 16, 7, -15, 1, -18)

[sub_resource type="CircleShape2D" id="CircleShape2D_rwmqg"]
radius = 26.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4yotv"]
radius = 16.0
height = 622.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rwmqg"]
radius = 17.0
height = 88.0

[node name="Enemy(Angry man)" type="CharacterBody2D"]
z_index = 9
collision_layer = 2
collision_mask = 3
script = ExtResource("1_rwmqg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3, -16.5)
scale = Vector2(0.601667, 0.633333)
sprite_frames = SubResource("SpriteFrames_dxllm")
animation = &"attack"
autoplay = "default"
frame = 7
frame_progress = 0.431805

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kfhcu")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -16)
shape = SubResource("ConvexPolygonShape2D_w6dnl")

[node name="DropSpot" type="Marker2D" parent="."]
position = Vector2(0, -11)

[node name="EnemyAttack" parent="." instance=ExtResource("7_4yotv")]
collision_layer = 3
damage = 2

[node name="CollisionShapeSigma" type="CollisionShape2D" parent="EnemyAttack"]
position = Vector2(19, -26)
shape = SubResource("CircleShape2D_rwmqg")
disabled = true

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
position = Vector2(0, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_4yotv")

[node name="AttackArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -17)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_rwmqg")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8

[node name="HPBar" type="Node2D" parent="."]

[node name="hpbar_right" type="TextureProgressBar" parent="HPBar"]
custom_minimum_size = Vector2(20, 2)
offset_left = -10.0
offset_top = -36.0
offset_right = 190.0
offset_bottom = -16.0
scale = Vector2(0.1, 0.102)
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("9_tpht8")
texture_progress = ExtResource("10_8bqjl")
metadata/_edit_use_anchors_ = true

[node name="hpbar_left" type="TextureProgressBar" parent="HPBar"]
visible = false
custom_minimum_size = Vector2(20, 2)
offset_left = -10.0
offset_top = -36.0
offset_right = 10.0
offset_bottom = -34.0
value = 100.0
fill_mode = 1
nine_patch_stretch = true
texture_under = ExtResource("11_bp8oi")
texture_progress = ExtResource("12_a5byo")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
